--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "astro": "^4.4.15",
     "@astrojs/check": "^0.5.6",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "ai-helper-jimmy": "1.2.1"
   }
 }
