--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "shining-singularity",
+  "name": "crypto-learing",
   "type": "module",
-  "version": "0.0.1",
+  "version": "1.3.2",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -14,5 +14,9 @@
     "@astrojs/check": "^0.5.6",
     "typescript": "^5.4.2",
     "ai-helper-jimmy": "1.2.1"
+  },
+  "repository": {
+	"type": "git",
+	"url": "git+https://github.com/sleepingAnt/CryptoLearning"
   }
 }
