--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crypto-learing",
   "type": "module",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
@@ -14,10 +14,10 @@
     "@astrojs/check": "^0.5.6",
     "typescript": "^5.4.2",
     "ai-helper-jimmy": "1.2.1",
-    "social-group-share": "0.0.1"
+    "social-group-share": "0.0.2"
   },
   "repository": {
 	"type": "git",
-	"url": "git+https://github.com/sleepingAnt/CryptoLearning"
+	"url": "https://github.com/sleepingAnt/CryptoLearning.git"
   }
 }
